@@ -4,6 +4,7 @@ Release 1.3.5 (in development)
 Bugs fixed
 ----------
 
+* Fix line numbers was not shown on warnings in LaTeX and texinfo builders
 
 Release 1.3.4 (released Jan 12, 2016)
 =====================================
